// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button renders primary Button correctly with default props 1`] = `
<button
  className="sc-bdfBwQ lmuDVK"
  disabled={false}
  onClick={[MockFunction]}
  size="small"
>
  Button Label
</button>
`;

exports[`Button renders primary Button correctly with size:large, theme: light, isPrimary:false 1`] = `
<button
  className="sc-bdfBwQ QcMRY"
  disabled={false}
  onClick={[MockFunction]}
  size="large"
>
  Button Label
</button>
`;

exports[`Button renders primary Button correctly with size:small, theme: dark, isPrimary:false 1`] = `
<button
  className="sc-bdfBwQ lmuDVK"
  disabled={false}
  onClick={[MockFunction]}
  size="small"
>
  Button Label
</button>
`;
